# water

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  README.md  vcpkg.json
src/: CMakeLists.txt  main.cpp  manageHtml.cpp  manageHtml.h  manageUrl.cpp  manageUrl.h
test/: index.html
